--- a/index.html
+++ b/index.html
@@ -117,28 +117,28 @@
                             <input class="form-check-input me-1" type="radio" name="flexRadioDefault"
                                 id="flexRadioDefault1">
                             <label class="form-check-label" for="flexRadioDefault1">
-                                <img src="imagenes/american-express.png" class="image metodoPagoImg" alt="">
+                                <img src="images/american-express.png" class="image metodoPagoImg" alt="">
                             </label>
                         </div>
                         <div class="form-check me-3 d-flex align-items-center">
                             <input class="form-check-input me-1" type="radio" name="flexRadioDefault"
                                 id="flexRadioDefault2" checked>
                             <label class="form-check-label" for="flexRadioDefault2">
-                                <img src="imagenes/paypal.png" class="image metodoPagoImg" alt="">
+                                <img src="images/paypal.png" class="image metodoPagoImg" alt="">
                             </label>
                         </div>
                         <div class="form-check me-3 d-flex align-items-center">
                             <input class="form-check-input me-1" type="radio" name="flexRadioDefault"
                                 id="flexRadioDefault2" checked>
                             <label class="form-check-label" for="flexRadioDefault2">
-                                <img src="imagenes/visa.png" class="image metodoPagoImg" alt="">
+                                <img src="images/visa.png" class="image metodoPagoImg" alt="">
                             </label>
                         </div>
                         <div class="form-check d-flex align-items-center">
                             <input class="form-check-input me-1" type="radio" name="flexRadioDefault"
                                 id="flexRadioDefault2" checked>
                             <label class="form-check-label" for="flexRadioDefault2">
-                                <img src="imagenes/maestro.png" class="image metodoPagoImg" alt="">
+                                <img src="images/maestro.png" class="image metodoPagoImg" alt="">
                             </label>
                         </div>
                     </div>
